--- a/TaskList/StoryBoards/Base.lproj/Main.storyboard
+++ b/TaskList/StoryBoards/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Root View Controller-->
+        <!--Task List-->
         <scene sceneID="izJ-MW-jsx">
             <objects>
                 <tableViewController id="p3l-wz-h9q" customClass="TaskListViewController" customModule="TaskList" customModuleProvider="target" sceneMemberID="viewController">
@@ -27,14 +27,14 @@
                             </connections>
                         </segmentedControl>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TaskListCell" textLabel="AEk-Qx-pKt" detailTextLabel="jRv-WK-911" style="IBUITableViewCellStyleValue1" id="3TQ-St-mtJ">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="5" reuseIdentifier="TaskListCell" textLabel="AEk-Qx-pKt" detailTextLabel="jRv-WK-911" style="IBUITableViewCellStyleValue1" id="3TQ-St-mtJ">
                                 <rect key="frame" x="0.0" y="87.333332061767578" width="393" height="43.666667938232422"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3TQ-St-mtJ" id="ucG-dB-uO3">
                                     <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="AEk-Qx-pKt">
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="AEk-Qx-pKt">
                                             <rect key="frame" x="20" y="15" width="25" height="14.333333333333334"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
@@ -60,7 +60,7 @@
                             <outlet property="delegate" destination="p3l-wz-h9q" id="rsD-5q-qEk"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="hIt-S3-cLr"/>
+                    <navigationItem key="navigationItem" title="Task List" id="hIt-S3-cLr"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="n6F-cq-i90" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
